Add dune overlay
Signed-off-by: David Scott <dave@recoil.org>
Signed-off-by: Anil Madhavapeddy <anil@recoil.org>

--- a/fmt.opam
+++ b/fmt.opam
@@ -5,20 +5,23 @@ maintainer: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
 authors: ["The fmt programmers"]
 homepage: "https://erratique.ch/software/fmt"
 doc: "https://erratique.ch/software/fmt/doc/"
-dev-repo: "git+https://erratique.ch/repos/fmt.git"
-bug-reports: "https://github.com/dbuenzli/fmt/issues"
+dev-repo: "git+https://github.com/dune-universe/fmt.git"
+bug-reports: "https://github.com/dune-universe/fmt/issues"
 license: ["ISC"]
 tags: ["string" "format" "pretty-print" "org:erratique"]
-depends: ["ocaml" {>= "4.08.0"}
-          "ocamlfind" {build}
-          "ocamlbuild" {build}
-          "topkg" {build & >= "1.0.3"}]
+depends: [
+  "dune"
+  "ocaml" {>= "4.08.0"}
+]
 depopts: ["base-unix"
           "cmdliner"]
 conflicts: ["cmdliner" {< "0.9.8"}]
-build: [["ocaml" "pkg/pkg.ml" "build" "--dev-pkg" "%{dev}%"
-          "--with-base-unix" "%{base-unix:installed}%"
-          "--with-cmdliner" "%{cmdliner:installed}%"]]
+build: [
+  [ "dune" "build" "-p" name "-j" jobs ]
+]
+run-test: [
+  [ "dune" "runtest" "-p" name "-j" jobs ]
+]
 description: """
 Fmt exposes combinators to devise `Format` pretty-printing functions.
 
@@ -32,3 +35,6 @@ Fmt is distributed under the ISC license.
 [cmdliner]: http://erratique.ch/software/cmdliner
 
 Home page: http://erratique.ch/software/fmt"""
+url {
+  src: "git+https://github.com/dune-universe/fmt#duniverse-v0.8.10"
+}
